fix: content jumps due to vertical scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 * {
   box-sizing: border-box;
 }
